terminando estructura de proyecto con materialize, fuentes responsive con rucksack

--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,84 @@
-body  {
-	background: red;
+
+body {
+	background: #fafafa;
+	color:#125688;
+	font-family: Montserrat;
+	/*font-size:responsive 15px 40px;*/
+}
+
+.main {
+	margin:30px auto;
+}
+
+.platzigram {
+	font-size: responsive 40px 60px;
+	font-family: Oleo Script;
+}
+
+.col.m5 {
+
+	/*border:1px solid blue;*/
+	height: 500px;
+	/*display: flex;*/
+	position: relative;
+}
+
+
+.col.m5 .img-res {
+	position: absolute;
+	top:20%;
+	/*border:1px solid red;*/
+	transform-origin: center;
+	/*background: url('../images/iphone.png') no-repeat;
+	/*height: 589px;*/
+	/*background-position:center 2px;*/
+}	
+
+.img-res img {
+	width: 100%;
+}
+
+.site-footer {
+	text-transform: uppercase;
+	font-size:12px;
+	text-align: center;
 
 }
 
-.hellow {
+.login-box,
+.singup-box {
+	background-color: white;
+	border:1px solid #edeeee; 
+	border-radius:3px;
+	padding: 10px 0;
+	text-align: center;
+}
 
-	&-title {
-		color:white;
-	}
 
-	&-cuadrado {
-		position: absolute;
-		right: 0;
-		border:1px solid blue;
-	}
+.singup-form {
+	width: 65%;
+	margin:0 auto;
+}
+
+.singup-form .sub-title {
+	font-size: responsive 25px 40px;
+	color: #a5a7aa;
 
 }
+
+.singup-form .btn.btn-fb {
+	background-color: #4090db;
+	font-size:.8em; 
+	
+}
+
+.singup-form .btn.btn-fb:hover {
+	background-color: #2d6599; 
+
+}
+
+.singup-form .btn.btn-singup {
+	background-color: #125688;
+
+}
+
