--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,10 @@
 
+$secondary-color: #125688;
+
+
+@import "node_modules/materialize-css/sass/materialize.scss";
+
+
 body {
 	background: #fafafa;
 	/*background: white;*/
@@ -12,22 +18,8 @@ body {
 }
 
 .platzigram {
-	font-size: calc(30.23256px + 2.32558vw);
+	font-size: responsive 40px 60px;
 	font-family: Oleo Script;
-}
-
-@media screen and (min-width: 1280px) {
-
-	.platzigram {
-		font-size: 60px;
-	}
-}
-
-@media screen and (max-width: 420px) {
-
-	.platzigram {
-		font-size: 40px;
-	}
 }
 
 .col.m5 { 
@@ -43,8 +35,7 @@ body {
 	position: absolute;
 	top:20%;
 	/*border:1px solid red;*/
-	-webkit-transform-origin: center;
-	        transform-origin: center;
+	transform-origin: center;
 	/*background: url('../images/iphone.png') no-repeat;
 	/*height: 589px;*/
 	/*background-position:center 2px;*/
@@ -77,23 +68,9 @@ body {
 }
 
 .singup-form .sub-title {
-	font-size: calc(17.67442px + 1.74419vw);
+	font-size: responsive 25px 40px;
 	color: #a5a7aa;
 
-}
-
-@media screen and (min-width: 1280px) {
-
-	.singup-form .sub-title {
-		font-size: 40px;
-	}
-}
-
-@media screen and (max-width: 420px) {
-
-	.singup-form .sub-title {
-		font-size: 25px;
-	}
 }
 
 .singup-form .btn.btn-fb {
