agregando browserify y babelify al proyecto para integrar cambios de es2016

--- a/views/index.pug
+++ b/views/index.pug
@@ -36,7 +36,7 @@ html
                 a(href='#!') ingles
           .col.s12.l3.push-l6.center-align
             | © Platzigram. 
-    script(src='js/index.js')
+    script(src='js/app.js')
     script(src='/images/ajax.googleapis.comimages/ajax/libs/jquery/1.9.1/jquery.min.js')
     script(language='JavaScript', type='text/javascript', src='https://cdnjs.cloudflare.comimages/ajax/libs/materialize/0.100.1/js/materialize.min.js')
     
