--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,7 @@
 html
   head
     link(rel='stylesheet' type='text/css' href='css/app.css')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css')
     link(rel='apple-touch-icon', sizes='57x57', href='images/apple-icon-57x57.png')
     link(rel='apple-touch-icon', sizes='60x60', href='images/apple-icon-60x60.png')
     link(rel='apple-touch-icon', sizes='72x72', href='images/apple-icon-72x72.png')
@@ -14,7 +15,6 @@ html
     link(rel='icon', type='image/png', sizes='32x32', href='/favicon-32x32.png')
     link(rel='icon', type='image/png', sizes='96x96', href='/favicon-96x96.png')
     link(rel='icon', type='image/png', sizes='16x16', href='/favicon-16x16.png')
-    link(rel='manifest', href='/manifest.json')
     meta(name='msapplication-TileColor', content='#ffffff')
     meta(name='msapplication-TileImage', content='/ms-icon-144x144.png')
     meta(name='theme-color', content='#ffffff')
@@ -37,7 +37,8 @@ html
           .col.s12.l3.push-l6.center-align
             | © Platzigram. 
     script(src='js/app.js')
-    script(src='/images/ajax.googleapis.comimages/ajax/libs/jquery/1.9.1/jquery.min.js')
-    script(language='JavaScript', type='text/javascript', src='https://cdnjs.cloudflare.comimages/ajax/libs/materialize/0.100.1/js/materialize.min.js')
+    script(src='https://code.jquery.com/jquery-3.2.1.min.js', integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=', crossorigin='anonymous')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js')
+  
     
            
