titulos dinamicos con title

--- a/views/index.pug
+++ b/views/index.pug
@@ -21,6 +21,7 @@ html
     link(href='https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script' rel='stylesheet')
     meta(name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no')
     meta(charset='UTF-8')
+    title=title
   body
     section#main-container
     footer.site-footer
